--- a/Config/config.yaml
+++ b/Config/config.yaml
@@ -1,11 +1,11 @@
 model:
   target: Scripts.diffusion_TS.Diffusion_TS
   params:
-    seq_length: 160
+    seq_length: 96
     feature_size: 5
     n_layer_enc: 1
     n_layer_dec: 2
-    d_model: 64  # 4 X 16
+    d_model: 64  # 4 X 16 = attention heads X 16
     timesteps: 200
     sampling_timesteps: 200
     loss_type: 'l1'
@@ -20,7 +20,7 @@ model:
 solver:
   base_lr: 1.0e-5
   max_epochs: 1000
-  results_folder: ./Checkpoints_syn
+  results_folder: ./Checkpoints_sin
   gradient_accumulate_every: 2
   save_cycle: 100  # max_epochs // 10
   ema:
